Added media resources

--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
         <header>
             <h1>Discover hidden places in the world around you</h1>
         </header>
-        <p><a href="">Download Excursion (Coming soon!)</a></p>
+        <div>
+            <p><a href="">Download Excursion (Coming soon!)</a></p>
+        </div>
+        <div>
+            <videos scr="excursion\resources\videos\excursion.mp4">
+            </video>
+        </div>
+        <div>
+            <h2>Your personal travel guide</h2>
+        </div>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img scr="excursion\resources\images\camp.webp">
+        
+        <div>
+            <img scr="excursion\resources\images\phone.png">
+            <h2>Coming Soon for iPhone and Android</h2>
+        </div>
+        <div>
+            <p><a href="">Download Excursion (Coming soon!)</a></p>
+        </div>
+        <footer>
+            <p>© Excursion</p>
+        </footer>
 
     </body>
 </html>
