added body style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Excursion</title>
-        <link rel="stylesheet" type="text/css" href="excursion\resources\CSS\style.css">
+        <link rel="stylesheet" type="text/css" href="C:\Pedro Fallas Estrada - CodeAcademy\Full-Stack Engineer Career Path\9. Bringing Your Site Online\excursion\resources\CSS\style.css">
     </head>
     <body>
         <header>
@@ -15,7 +15,7 @@
             <p><a href="">Download Excursion (Coming soon!)</a></p>
         </div>
         <div>
-            <videos scr="excursion\resources\videos\excursion.mp4">
+            <videos scr="C:\Pedro Fallas Estrada - CodeAcademy\Full-Stack Engineer Career Path\9. Bringing Your Site Online\excursion\resources\videos\excursion.mp4" width="320" height="240" controls>
             </video>
         </div>
         <div>
@@ -25,7 +25,7 @@
         <img scr="excursion\resources\images\camp.webp">
         
         <div>
-            <img scr="excursion\resources\images\phone.png">
+            <img scr="C:\Pedro Fallas Estrada - CodeAcademy\Full-Stack Engineer Career Path\9. Bringing Your Site Online\excursion\resources\images\phone.png">
             <h2>Coming Soon for iPhone and Android</h2>
         </div>
         <div>
