--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1>Discover hidden places in the world around you</h1>
+            <h1 class="header--main">Discover hidden places in the world around you</h1>
         </header>
         <div>
             <p><a href="">Download Excursion (Coming soon!)</a></p>
