Added link--cta Style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1 class="header--main">Discover hidden places in the world around you</h1>
         </header>
         <div>
-            <p><a href="">Download Excursion (Coming soon!)</a></p>
+            <p><a class ="link--cta" href="">Download Excursion (Coming soon!)</a></p>
         </div>
         <div>
             <videos scr="C:\Pedro Fallas Estrada - CodeAcademy\Full-Stack Engineer Career Path\9. Bringing Your Site Online\excursion\resources\videos\excursion.mp4" width="320" height="240" controls>
@@ -29,7 +29,7 @@
             <h2>Coming Soon for iPhone and Android</h2>
         </div>
         <div>
-            <p><a href="">Download Excursion (Coming soon!)</a></p>
+            <p><a class ="link--cta" href="">Download Excursion (Coming soon!)</a></p>
         </div>
         <footer>
             <p>© Excursion</p>
