Added boiler plate and style

--- a/index.html
+++ b/index.html
@@ -5,34 +5,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Excursion</title>
-        <link rel="stylesheet" type="text/css" href="C:\Pedro Fallas Estrada - CodeAcademy\Full-Stack Engineer Career Path\9. Bringing Your Site Online\excursion\resources\CSS\style.css">
+        <link rel="stylesheet" type="text/css" href="resources/CSS/style.css">
     </head>
     <body>
-        <header>
-            <h1 class="header--main">Discover hidden places in the world around you</h1>
-        </header>
-        <div>
-            <p><a class ="link--cta" href="">Download Excursion (Coming soon!)</a></p>
-        </div>
-        <div>
-            <videos scr="C:\Pedro Fallas Estrada - CodeAcademy\Full-Stack Engineer Career Path\9. Bringing Your Site Online\excursion\resources\videos\excursion.mp4" width="320" height="240" controls>
-            </video>
-        </div>
-        <div>
-            <h2>Your personal travel guide</h2>
-        </div>
-        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <img scr="excursion\resources\images\camp.webp">
-        
-        <div>
-            <img scr="C:\Pedro Fallas Estrada - CodeAcademy\Full-Stack Engineer Career Path\9. Bringing Your Site Online\excursion\resources\images\phone.png">
-            <h2>Coming Soon for iPhone and Android</h2>
-        </div>
-        <div>
-            <p><a class ="link--cta" href="">Download Excursion (Coming soon!)</a></p>
-        </div>
+
+        <!-- Landing section -->
+
+        <h1 class="header--main">Discover hidden places in the world around you</h1>
+        <p><a class ="link--cta" href="#">Download Excursion (Coming soon!)</a></p>
+        <video autoplay muted loop>
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
+        </video>
+
+        <!-- Information Section -->
+
+        <h2 class="second-title">Your personal travel guide</h2>
+        <p class="description-text">Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <p><img src="resources/images/camp.jpg"></p>
+
+        <!-- Coming Soon Section -->
+
+        <p><img src="resources/images/phone.png"></p>
+        <h2 class="second-title">Coming Soon for iPhone and Android</h2>
+        <p><a class ="link--cta" href="">Download Excursion (Coming soon!)</a></p>
         <footer>
-            <p>© Excursion</p>
+            <p class="copyright">© Excursion</p>
         </footer>
 
     </body>
